# libkmip

./: .clang-format  .gitignore  CHANGELOG.rst  CMakeLists.txt  Doxyfile  KMIP_MODERN_VS_LEGACY_COMPARISON.md  MIGRATION_GUIDE_KMIPPP_TO_KMIPCLIENT.md  Makefile  README.md  demo_create.c  demo_locate  demo_locate.c  kmip.c  kmip.h  kmip_bio.c  kmip_bio.h  kmip_locate.c
demos/: demo_query.c
include/: kmip.h  kmip_bio.h  kmip_io.h
kmipclient/: .clang-format  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
kmipclient/examples/: example_activate.cpp  example_create_aes.cpp  example_destroy.cpp  example_get.cpp  example_get_all_ids.cpp  example_get_attributes.cpp  example_get_logger.cpp  example_get_name.cpp  example_get_secret.cpp  example_get_tls_verify.cpp  example_locate.cpp  example_locate_by_group.cpp  example_pool.cpp  example_query_server_info.cpp  example_register_key.cpp  example_register_secret.cpp  example_revoke.cpp  example_supported_versions.cpp
kmipclient/include/: Key.hpp  Kmip.hpp  KmipClient.hpp  Logger.hpp  NetClient.hpp  NetClientOpenSSL.hpp  kmip_data_types.hpp  kmip_exceptions.hpp  kmipclient_version.hpp  v_expected.hpp
kmipclient/include/kmipclient/: Key.hpp  KeyBase.hpp  Kmip.hpp  KmipClient.hpp  KmipClientPool.hpp  KmipIOException.hpp  NetClient.hpp  NetClientOpenSSL.hpp  PEMReader.hpp  PrivateKey.hpp  PublicKey.hpp  SymmetricKey.hpp  X509Certificate.hpp  kmipclient_version.hpp  types.hpp
kmipclient/src/: AttributesFactory.cpp  AttributesFactory.hpp  IOUtils.cpp  IOUtils.hpp  Key.cpp  KeyFactory.cpp  KeyFactory.hpp  KmipClient.cpp  KmipClientPool.cpp  KmipCtx.hpp  KmipRequest.hpp  NetClientOpenSSL.cpp  PEMReader.cpp  PrivateKey.cpp  PublicKey.cpp  RequestFactory.cpp  RequestFactory.hpp  ResponseFactory.hpp  ResponseResult.cpp  ResponseResult.hpp  StringUtils.cpp  StringUtils.hpp  SymmetricKey.cpp  X509Certificate.cpp  kmip_exceptions.hpp
kmipclient/tests/: IOUtilsTest.cpp  KmipClientIntegrationTest.cpp  KmipClientIntegrationTest_2_0.cpp  KmipClientPoolIntegrationTest.cpp  TestEnvUtils.hpp
kmipcore/: CMakeLists.txt
kmipcore/include/kmipcore/: attributes_parser.hpp  key.hpp  key_parser.hpp  kmip_attribute_names.hpp  kmip_attributes.hpp  kmip_basics.hpp  kmip_enums.hpp  kmip_errors.hpp  kmip_formatter.hpp  kmip_logger.hpp  kmip_protocol.hpp  kmip_requests.hpp  kmip_responses.hpp  kmipcore_version.hpp  managed_object.hpp  response_parser.hpp  secret.hpp  serialization_buffer.hpp
kmipcore/src/: attributes_parser.cpp  key_parser.cpp  kmip_attributes.cpp  kmip_basics.cpp  kmip_errors.cpp  kmip_formatter.cpp  kmip_payloads.cpp  kmip_protocol.cpp  kmip_requests.cpp  kmip_responses.cpp  response_parser.cpp  serialization_buffer.cpp
kmipcore/tests/: test_core.cpp  test_parsers.cpp  test_serialization_buffer.cpp
kmippp/: CMakeLists.txt  core_error.cpp  core_error.hpp  demo_activate.cpp  demo_all.cpp  demo_all_secrets.cpp  demo_create.cpp  demo_destroy.cpp  demo_get.cpp  demo_get_name.cpp  demo_get_secret.cpp  demo_locate.cpp  demo_register.cpp  demo_register_secret.cpp  demo_revoke.cpp  kmippp.cpp  kmippp.h
libkmip/include/: kmip.h  kmip_bio.h  kmip_enums.h  kmip_locate.h  kmip_memset.h  kmip_structs.h  libkmip_version.h
libkmip/src/: CMakeLists.txt  demo_create.c  demo_destroy.c  demo_get.c  demo_locate.c  demo_query.c  demo_register.c  kmip.c  kmip_bio.c  kmip_locate.c  kmip_memset.c  tests.c
src/: kmip.c  kmip_io.c
